crates/otter-vm/tests/compile_fail/value_is_not_send.stderr
error[E0599]: no associated function or constant named `Undefined` found for struct `otter_vm::Value` in the current scope
 --> tests/compile_fail/value_is_not_send.rs:9:34
  |
9 |     let value = otter_vm::Value::Undefined;
  |                                  ^^^^^^^^^ associated function or constant not found in `otter_vm::Value`
  |
help: there is an associated function `undefined` with a similar name
 --> src/value/mod.rs
  |
  |     pub const fn undefined() -> Self {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
